--- a/_pages/packages/index.html
+++ b/_pages/packages/index.html
@@ -95,12 +95,36 @@ layout: custom
                 {% endif %}
             <tr>
                 <td class="v-center">
-                    {% if package[1].image == "" %}
-                    {{ package[0] }} has no preview :(
+                    {% assign imageExtension = package[1].image | split: "." | last %}
+                    {% if package[1].image == "" or imageExtension == null %}
+                    <div style="width: 64px; height: 64px;">
+                        <svg width="64" height="64">
+                          <g>
+                            <text x="50%" y="40%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                              Missing
+                            </text>
+                            <text x="50%" y="60%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                              Image
+                            </text>
+                          </g>
+                        </svg>
+                        </div>
+                    {% elsif imageExtension != "png" and imageExtension != "jpg" and imageExtension != "jpeg" and imageExtension != "gif" %}
+                        <div style="width: 64px; height: 64px;">
+                        <svg width="64" height="64">
+                          <g>
+                            <text x="50%" y="40%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                              Missing
+                            </text>
+                            <text x="50%" y="60%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                              Image
+                            </text>
+                          </g>
+                        </svg>
+                        </div>
                     {% else %}
-                    <a href="#" class="preview-link" data-image="{{package[1].image}}" data-name="{{package[0]}}">
-                        <img src="{{package[1].image}}" style="max-width: 64px;" alt="{{package[0]}}" />
-                    </a>
+                        <img src="{{package[1].image}}" style="max-width: 64px;" alt="{{package[0]}}" class="thumbnail" data-name="{{i}}_preview">
+                        <img src="{{package[1].image }}" alt="{{package[0]}}" class="hidden-large" id="{{i}}_preview">
                     {% endif %}
                 </td>
                 <td data-sort="{{package[0]}}" data-search="{{package[0]}}" width="20%">
