--- a/_pages/themes/index.html
+++ b/_pages/themes/index.html
@@ -96,8 +96,33 @@ layout: custom
                 {% endif %}
                     <tr>
                         <td class="v-center">
-                            {% if package[1].image == "" %}
-                                {{ package[0] }} has no preview :(
+                            {% assign imageExtension = package[1].image | split: "." | last %}
+                            {% if package[1].image == "" or imageExtension == null %}
+                            <div style="width: 64px; height: 64px;">
+                                <svg width="64" height="64">
+                                  <g>
+                                    <text x="50%" y="40%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                                      Missing
+                                    </text>
+                                    <text x="50%" y="60%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                                      Image
+                                    </text>
+                                  </g>
+                                </svg>
+                                </div>
+                            {% elsif imageExtension != "png" and imageExtension != "jpg" and imageExtension != "jpeg" and imageExtension != "gif" %}
+                                <div style="width: 64px; height: 64px;">
+                                <svg width="64" height="64">
+                                    <g>
+                                    <text x="50%" y="40%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                                        Missing
+                                    </text>
+                                    <text x="50%" y="60%" text-anchor="middle" alignment-baseline="middle" font-size="12" fill="#bd93f9">
+                                        Image
+                                    </text>
+                                    </g>
+                                </svg>
+                                </div>
                             {% else %}
                                 <img src="{{package[1].image}}" style="max-width: 64px;" alt="{{package[0]}}" class="thumbnail" data-name="{{i}}_preview">
                                 <img src="{{package[1].image }}" alt="{{package[0]}}" class="hidden-large" id="{{i}}_preview">
